# frigate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: all_perks.csv  categories.md  lore.md  manual.md  notes.md  perks.md  rulebook.md  slots.md
docs/design/: objects.md  states.md
docs/notes/: scratch.md
scripts/: generate_random_perks.py
src/frigate/models/: dice.py  game.py  perks.py  scorecard.py  shop.py
