[project]
name = "frigate"
dynamic = ["version"]
description = "A Yahtzee-themed roguelike deckbuilding game inspired by Balatro"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nick O'Malley", email = "nickpeteromalley@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
frigate = "frigate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "_version.py"

[tool.ruff]
line-length = 90 # For linting (e.g., E501 rule)

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 70